feature[NAP-291]: upgrade to java 17