@@ -25,7 +25,7 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <type>pom</type>
-                <version>2021.0.3</version>
+                <version>2021.0.4</version>
                 <scope>import</scope>
             </dependency>
         </dependencies>
@@ -35,7 +35,7 @@
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <lombok.version>1.18.24</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <shedlock-spring.version>4.41.0</shedlock-spring.version>
+        <shedlock-spring.version>4.42.0</shedlock-spring.version>
     </properties>
 
     <dependencies>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20220320</version>
+            <version>20220924</version>
         </dependency>
         <dependency>
             <groupId>com.qod</groupId>
@@ -140,6 +140,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -163,8 +168,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.9.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
